--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
+        "dayjs": "^1.11.5",
         "micromodal": "^0.4.10",
         "yubinbango-core2": "^0.6.3"
     }
